--- a/index.html
+++ b/index.html
@@ -349,6 +349,7 @@
                     </div>
                 </div>
             </div>
+            <p style="text-align: center; padding: 10px 0;">Designed and Developed by Akshay Adme &copy;</p>
         </div>
     </footer>
 </body>
@@ -356,19 +357,19 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/619cf0717e.js" crossorigin="anonymous"></script>
-<script>
+<script src="js/style.js">
 
-    let prevScrollpos = window.pageYOffset;
-    window.onscroll = function () {
-        let currentScrollPos = window.pageYOffset;
-        if (prevScrollpos > currentScrollPos) {
-            document.querySelector(".navbar").style.top = "0";
-        } else {
-            document.querySelector(".navbar").style.top = "-100px";
-            document.querySelector(".navbar").style.backgroundColor = "white";
-        }
-        prevScrollpos = currentScrollPos;
-    }
+    // let prevScrollpos = window.pageYOffset;
+    // window.onscroll = function () {
+    //     let currentScrollPos = window.pageYOffset;
+    //     if (prevScrollpos > currentScrollPos) {
+    //         document.querySelector(".navbar").style.top = "0";
+    //     } else {
+    //         document.querySelector(".navbar").style.top = "-100px";
+    //         document.querySelector(".navbar").style.backgroundColor = "white";
+    //     }
+    //     prevScrollpos = currentScrollPos;
+    // }
 
 </script>
 
